--- a/Proyecto-os-backend/package.json
+++ b/Proyecto-os-backend/package.json
@@ -14,7 +14,8 @@
         "bcryptjs": "^2.4.3",
         "express": "^4.17.1",
         "express-myconnection": "^1.0.4",
-        "mysql": "^2.18.1"
+        "mysql": "^2.18.1",
+        "xhr2": "^0.2.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.12"
